<resources>
    <string name="app_name">TeamPlay</string>
    <string name="action_settings">Settings</string>
    <string name="quest_title">퀘스트</string>
    <string name="quest_description">설명</string>
    <string name="quest_startAt">시작일</string>
    <string name="quest_dueAt">목표일</string>
    <string name="quest_endAt">종료일</string>
    <string name="quest_owner">소유자</string>
    <string name="quest_rewardType">타입</string>
    <string name="quest_reward">점수</string>
    <string name="hint_id">ID</string>
    <string name="hint_pw">PW</string>
    <string name="login_text">로그인</string>
    <string name="signin_text">회원가입</string>
    <string name="remove_text">제거</string>
    <string name="modify_text">변경</string>
    <string name="finish_text">완료</string>
    <string name="add_text">추가</string>
    <string name="cancle_text">취소</string>
    <string name="rule_text">룰</string>
</resources>
