<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal|center"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:context=".activity.dialog.QuestPopupDialog">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Title"
                style="@style/QuestAddPopupTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/bmdohyeon"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="5"
                android:background="@drawable/btn_red_round"
                android:src="@drawable/btn_cancle_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTitle"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="3"
                    android:text="@string/quest_title" />

                <EditText
                    android:id="@+id/editTitle"
                    style="@style/QuestAddPopupEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textShortMessage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textStartAt"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="1"
                    android:text="@string/quest_startAt" />

                <TextView
                    android:id="@+id/editStartAt"
                    style="@style/QuestAddPopupEditText"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textDueAt"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="1"
                    android:text="@string/quest_dueAt" />

                <TextView
                    android:id="@+id/editDueAt"
                    style="@style/QuestAddPopupEditText"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textRule"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="3"
                    android:text="@string/rule_text" />

                <Spinner
                    android:id="@+id/spinnerRule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_no_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textType"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="1"
                    android:text="@string/quest_rewardType" />

                <Spinner
                    android:id="@+id/spinnerRewardType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_no_selector" />

                <TextView
                    android:id="@+id/textReward"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="1"
                    android:text="@string/quest_reward" />

                <EditText
                    android:id="@+id/editReward"
                    style="@style/QuestAddPopupEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textDescription"
                    style="@style/QuestAddPopupTextView"
                    android:layout_weight="3"
                    android:text="@string/quest_description" />

                <EditText
                    android:id="@+id/editDescription"
                    style="@style/QuestAddPopupEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine|textLongMessage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRemove"
                style="@style/QuestAddPopupButton"
                android:layout_weight="1"
                android:background="@drawable/btn_red_round"
                android:text="@string/cancle_text" />

            <Button
                android:id="@+id/btnFinish"
                style="@style/QuestAddPopupButton"
                android:layout_weight="1"
                android:text="@string/finish_text" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/QuestAddPopupButton"
                android:layout_weight="1"
                android:text="@string/add_text" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>