<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F3F5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="64dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_pac_icon"/>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/button_white_normal"
                android:layout_marginTop="12dp"
                android:layout_height="48dp"
                android:elevation="1dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/login_id_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:layout_marginLeft="24dp"
                    android:hint="@string/hint_id" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/button_white_normal"
                android:layout_height="48dp"
                android:elevation="1dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/login_pw_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pw" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_teal"
                android:text="@string/login_text"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>



    </RelativeLayout>

</LinearLayout>